--- a/Altkom.Shop.WpfClient/App.xaml
+++ b/Altkom.Shop.WpfClient/App.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:Altkom.Shop.WpfClient"
-    StartupUri="Views/ShellView.xaml">
+    StartupUri="Views/ShellView2.xaml">
 
     <Application.Resources>
 
