--- a/Altkom.Shop.WpfClient/Resources/DataTemplates.xaml
+++ b/Altkom.Shop.WpfClient/Resources/DataTemplates.xaml
@@ -1,7 +1,18 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:m="clr-namespace:Altkom.Shop.Models;assembly=Altkom.Shop.Models">
+    xmlns:m="clr-namespace:Altkom.Shop.Models;assembly=Altkom.Shop.Models"
+    xmlns:v="clr-namespace:Altkom.Shop.WpfClient.Views"
+    xmlns:vm="clr-namespace:Altkom.Shop.ViewModels;assembly=Altkom.Shop.ViewModels">
+
+
+    <DataTemplate DataType="{x:Type vm:ProductsViewModel}">
+        <v:ProductsView2 />
+    </DataTemplate>
+
+    <DataTemplate DataType="{x:Type vm:ServicesViewModel}">
+        <v:CustomersView2 />
+    </DataTemplate>
 
     <DataTemplate x:Key="CustomerTemplate" DataType="{x:Type m:Customer}">
 
@@ -143,7 +154,12 @@
             </TextBlock>
 
 
-            <Button HorizontalAlignment="Right" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}, Path=DataContext.DiscountCommand}" CommandParameter="{Binding}">Discount</Button>
+            <Button
+                HorizontalAlignment="Right"
+                Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}, Path=DataContext.DiscountCommand}"
+                CommandParameter="{Binding}">
+                Discount
+            </Button>
 
             <TextBlock HorizontalAlignment="Right" Text="{Binding UnitPrice, StringFormat={}{0:C2}}">
 
