--- a/Altkom.Shop.WpfClient/Views/CustomersView.xaml
+++ b/Altkom.Shop.WpfClient/Views/CustomersView.xaml
@@ -2,15 +2,17 @@
     x:Class="Altkom.Shop.WpfClient.Views.CustomersView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="clr-namespace:Altkom.Shop.WpfClient.Behaviors"
     xmlns:c="clr-namespace:Altkom.Shop.WpfClient.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:Altkom.Shop.WpfClient.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="clr-namespace:Altkom.Shop.WpfClient.UserControls"
     xmlns:vm="clr-namespace:Altkom.Shop.ViewModels;assembly=Altkom.Shop.ViewModels"
     Title="CustomersView"
     d:Background="White"
-    d:DesignHeight="650"
+    d:DesignHeight="950"
     d:DesignWidth="800"
     DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=CustomersViewModel}"
     mc:Ignorable="d">
@@ -90,7 +92,25 @@
 
             <!--<Button Command="{Binding SendCommand}" Visibility="{Binding SelectedCustomer.IsRemoved, Converter={StaticResource BoolToVisibilityConverter}}">Send</Button>-->
 
-            <Button Command="{Binding SendCommand}" Visibility="{Binding SelectedCustomer.IsRemoved, Converter={c:BoolToVisibilityConverter}}">Send</Button>
+            <Button
+                Command="{Binding SendCommand}"
+                Content="Send"
+                Visibility="{Binding SelectedCustomer.IsRemoved, Converter={c:BoolToVisibilityConverter}}">
+
+                <i:Interaction.Behaviors>
+                    <b:MouseEnterButtonBehavior Offset="{Binding ElementName=OffsetSlider, Path=Value}" />
+                    <b:MouseEnterToCommandBehavior Command="{Binding SendCommand}" />
+                </i:Interaction.Behaviors>
+
+            </Button>
+
+
+            <Slider
+                x:Name="OffsetSlider"
+                IsSnapToTickEnabled="True"
+                Maximum="100"
+                Minimum="10"
+                TickFrequency="1" />
 
 
 
