--- a/Altkom.Shop.WpfClient/Resources/DataTemplates.xaml
+++ b/Altkom.Shop.WpfClient/Resources/DataTemplates.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:m="clr-namespace:Altkom.Shop.Models;assembly=Altkom.Shop.Models"
     xmlns:v="clr-namespace:Altkom.Shop.WpfClient.Views"
     xmlns:vm="clr-namespace:Altkom.Shop.ViewModels;assembly=Altkom.Shop.ViewModels">
@@ -44,6 +45,20 @@
                             <Binding Path="LastName" />
                         </MultiBinding>
                     </TextBlock.Text>
+                </TextBlock>
+
+                <TextBlock Text="{Binding CreditAmount, StringFormat={}{0:C2}}">
+
+                    <!--  https://github.com/Microsoft/XamlBehaviors/wiki/DataTriggerBehavior  -->
+                    <i:Interaction.Triggers>
+                        <i:DataTrigger
+                            Binding="{Binding CreditAmount}"
+                            Comparison="GreaterThan"
+                            Value="200">
+                            <i:ChangePropertyAction PropertyName="Foreground" Value="Red" />
+                        </i:DataTrigger>
+                    </i:Interaction.Triggers>
+
                 </TextBlock>
 
             </StackPanel>
