--- a/Altkom.Shop.WpfClient/Views/ProductsView.xaml
+++ b/Altkom.Shop.WpfClient/Views/ProductsView.xaml
@@ -69,6 +69,8 @@
                 <Button Command="{Binding SaveCommand}">Save</Button>
                 <Button Command="{Binding CalculateCommand}" Style="{StaticResource PrimaryButtonStyle}">Calculate</Button>
 
+                <Button Command="{Binding CancelCalculateCommand}">Cancel</Button>
+
                 <ProgressBar
                     Width="200"
                     Height="20"
