Asynchroniczne ładowanie danych

--- a/Altkom.Shop.WpfClient/Views/ProductsView.xaml
+++ b/Altkom.Shop.WpfClient/Views/ProductsView.xaml
@@ -16,6 +16,12 @@
     DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=ProductsViewModel}"
     mc:Ignorable="d">
 
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadCommand}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+
 
     <Grid>
 
